--- a/APP/src/main/resources/templates/body-users.html
+++ b/APP/src/main/resources/templates/body-users.html
@@ -3,11 +3,8 @@
     <thead>
     <tr>
         <th>ID</th>
-        <th>Username</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>E-mail</th>
         <th>Number of Orders</th>
-        <th>Role</th>
         <th>Edit</th>
         <th>Delete</th>
     </tr>
