- Fix bugs & reformat code
Signed-off-by: Konstantin Bogdanoski <konstantin.b@live.com>

--- a/APP/src/main/resources/templates/master-admin.html
+++ b/APP/src/main/resources/templates/master-admin.html
@@ -147,19 +147,22 @@
     </div>
     <div>
         <form method="get" action="/">
-            <button type="submit" class="button-secondary">Home Page</button>
+            <button type="submit" class="button-secondary">Home</button>
         </form>
         <form method="get" action="/admin">
-            <button type="submit" class="button-success">Orders Page</button>
+            <button type="submit" class="button-success">Orders</button>
         </form>
         <form method="get" action="/admin/users">
-            <button type="submit" class="button-success">Users Page</button>
+            <button type="submit" class="button-success">Customers</button>
+        </form>
+        <form method="get" action="/admin/employees">
+            <button type="submit" class="button-success">Employees</button>
         </form>
         <form method="get" action="/admin/ingredients">
-            <button type="submit" class="button-success">Ingredients Page</button>
+            <button type="submit" class="button-success">Ingredients</button>
         </form>
         <form method="get" action="/admin/pizzas">
-            <button type="submit" class="button-success">Pizzas Page</button>
+            <button type="submit" class="button-success">Pizzas</button>
         </form>
         <form method="get" action="/admin/addIngredient">
             <button type="submit" class="button-success">Add Ingredient</button>
