--- a/APP/src/main/resources/templates/body-edit-user.html
+++ b/APP/src/main/resources/templates/body-edit-user.html
@@ -16,15 +16,13 @@
     <h2>Edit User</h2>
     <input type="hidden" name="userID" th:value="${user.id}">
     <input type="hidden" name="_method" value="PATCH"/>
-    <label for="username">Username</label>
-    <input style="background: dimgray; border: dimgray" id="username" th:field="*{email}" th:value="${user.email}"
+    <label for="email">E-mail</label>
+    <input style="background: dimgray; border: dimgray" id="email" th:field="*{email}" th:value="${user.email}"
            type="text" readonly><br><br>
-    <label for="role">Role</label>
-    <select id="role" th:field="*{userRole}">
-        <option th:value="'ROLE_ADMIN'" th:text="Admin"></option>
-        <option th:value="'ROLE_USER'" th:text="User"></option>
-    </select>
-    <hr>
+    <label for="address">Address</label>
+    <input style="border: dimgray" id="address" th:field="*{address}" th:value="${user.address}"
+           type="text">
+    <hr/>
     <button type="submit" class="button-secondary">Change</button>
     <button type="button" class="button-error" onclick="location.href='/admin/users'">Cancel</button>
 </form>
