- Reformat code & add employee pages
Signed-off-by: Konstantin Bogdanoski <konstantin.b@live.com>

--- a/APP/src/main/resources/templates/master-admin.html
+++ b/APP/src/main/resources/templates/master-admin.html
@@ -155,8 +155,11 @@
         <form method="get" action="/admin/users">
             <button type="submit" class="button-success">Customers</button>
         </form>
-        <form method="get" action="/admin/employees">
-            <button type="submit" class="button-success">Employees</button>
+        <form method="get" action="/admin/deliverers">
+            <button type="submit" class="button-success">Deliverers</button>
+        </form>
+        <form method="get" action="/admin/chefs">
+            <button type="submit" class="button-success">Chefs</button>
         </form>
         <form method="get" action="/admin/ingredients">
             <button type="submit" class="button-success">Ingredients</button>
