--- a/APP/src/main/resources/templates/master-admin.html
+++ b/APP/src/main/resources/templates/master-admin.html
@@ -173,6 +173,9 @@
         <form method="get" action="/admin/addPizza">
             <button type="submit" class="button-success">Add Pizza</button>
         </form>
+        <form method="get" action="/admin/bonus">
+            <button type="submit" class="button-secondary">Check Bonus</button>
+        </form>
         <form method="get" action="/logout" onsubmit="return logout(this)">
             <button type="submit" class="button-error">Log out</button>
         </form>
